--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -77,10 +77,21 @@
   </div>
 </div>
 
-<h1>Comments</h1>
 
+<div class="col-10 offset-1">
+    <h1 class="float-left">Comments</h1>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
+      Add a comment
+    </button>
+</body>div>
+
+
+<div class="clear"></div>
+
+<div class="row">
 <% @place.comments.each do |comment| %>
-  <div>
+  <div class="col-12 col-sm-6">
     <% if comment.humanized_rating.present? %>
         <b><%= comment.humanized_rating %></b> -
       <% end %>
@@ -89,3 +100,4 @@
     </blockquote>
   </div>
 <% end %>
+</div>
