--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
     <ul class="navbar-nav">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to 'A user is signed in!', '#', class: 'nav-link' %>
+          <%= link_to 'My Profile', user_path(current_user), class: 'nav-link' %>
         </li>
       <% else %>
         <li class="nav-item">
