--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -72,18 +72,22 @@ blockquote p {
 }
 
 .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
-  max-height: 550px;
+  max-height: 400px;
   width: 100%;
-  margin-bottom: 0;
+  margin: auto;
+  padding-top: auto;
+  padding-bottom: auto;
 }
 
 .carousel-caption {
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 60px;
-  font-weight: 100;
+  font-size: 100px;
+  font-weight: 300; 
+  font-color: #28800a;
+  font-style: bold;
   text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
   background-color: rgba(0, 0, 0, 0.5);
-  width: 100%,
+  width: 100%;
   position: absolute;
   left: 0;
 }
