--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,3 +1,5 @@
+<% if !@places.empty? %>
+
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -5,16 +7,18 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <%= image_tag 'slider1.jpg', class: 'img-fluid' %>
+      <%= image_tag 'slider1.jpg', class: 'd-block img-fluid' %>
       <div class="carousel-caption d-none d-md-block">
-      <h3>Find the best pizza places</h3>
+        <h3>Find the best pizza places</h3>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag 'slider2.jpg', class: 'd-block img-fluid' %>
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Looking for hotdogs?</h3>
+      </div>
     </div>
   </div>
-    <div class="carousel-item">
-      <%= image_tag 'slider2.jpg', class: 'img-fluid' %>
-      <div class="carousel-caption d-none d-md-block">
-      <h3>Looking for hotdogs?</h3>
-    </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
@@ -26,25 +30,44 @@
 </div>
 
 <% @places.each do |place| %>
+
   <div class="booyah-box col-10 offset-1">
+
     <h1><%= link_to place.name, place_path(place) %></h1><br />
+
     <i><%= place.address %></i><br /><br />
+
     <p><%= place.description %></p><br />
 
     <% if place.user.present? %>
-    	<small><%= place.user.email %></small>
+
+      <small><%= place.user.email %></small>
+
     <% end %>
+    <% if place.comments.present? %>
 
-   <% if place.comments.present? %>
-    <div class="col-12">
- 		 <blockquote>
-    		<% if place.comments.last.humanized_rating.present? %>
-      		<b><%= place.comments.last.humanized_rating %></b> -
-    	<% end %>
+    
+
+      <blockquote>
+
+        <% if place.comments.last.humanized_rating.present? %>
+
+          <b><%= place.comments.last.humanized_rating %></b> -
+
+        <% end %>
+
         <%= place.comments.last.message %>
-        <small><%= place.comments.last.user.email %></small>
-  </blockquote>
- </div>
-</div>
 
-<% end %>
+        <small><%= place.comments.last.user.email %></small>
+
+      </blockquote>
+
+    </div>
+
+  <% end %>
+
+  </div>
+
+ <% end %>
+
+ <% end %>
