--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,22 +4,16 @@
   <br/><br/>
   <p><%= @place.description %></p>
 
-  </head>
-  <body>
-  <div id="map"></div>
 
 <% if @place.latitude.present? && @place.longitude.present? %>
-
+ 
   <script>
-
     function initMap() {
       var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
-
       var map = new google.maps.Map(document.getElementById('map'), {
         zoom: 12,
         center: myLatLng
       });
-
       var marker = new google.maps.Marker({
         position: myLatLng,
         map: map,
@@ -29,29 +23,24 @@
   </script>
 
   <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJhRHg6nnKUBVMxHg_SN5V-7iGaNVNYrc&callback=initMap">
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjrC_hY9rg8rS1N2j0gKcZjuHosSnVAeE&callback=initMap">
   </script>
 
-  <div id="map"></div>
-
+   <div id="map"></div>
 <% end %>
 
-<br />
-  
+<br /> 
+
   <div class="float-right">
-  	<% if current_user && current_user == @place.user %>
-    <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
-	<%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
-	<% end %>
-  </div>
+    <% if current_user && current_user == @place.user %>
+      <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
+      <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
+    <% end %>  
+  </div> 
 </div>
-
 <div class="clear"></div>
-<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-  <%= f.input :message %>
-  <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
-  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
-<% end %>
+
+
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -73,31 +62,30 @@
           <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
         </div>
       <% end %>
+      </div>
     </div>
   </div>
 </div>
 
-
 <div class="col-10 offset-1">
-    <h1 class="float-left">Comments</h1>
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
-      Add a comment
-    </button>
-</body>div>
-
+<h1 class="float-left">Comments</h1>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
+  Add a comment
+</button>
+</div>
 
 <div class="clear"></div>
-
 <div class="row">
-<% @place.comments.each do |comment| %>
-  <div class="col-12 col-sm-6">
-    <% if comment.humanized_rating.present? %>
-        <b><%= comment.humanized_rating %></b> -
-      <% end %>
-      <%= comment.message %>
-      <small><%= comment.user.email %></small>
-    </blockquote>
-  </div>
-<% end %>
+  <% @place.comments.each do |comment| %>
+    <div class="col-12 col-sm-6">
+      <blockquote>
+       <% if comment.humanized_rating.present? %>
+          <b><%= comment.humanized_rating %></b> -
+        <% end %>
+        <%= comment.message %>
+        <small><%= comment.user.email %></small>
+      </blockquote>
+    </div>
+  <% end %>
 </div>
