--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,46 +1,112 @@
 <div class="booyah-box col-10 offset-1">
+
   <h1><%= @place.name %></h1>
+
   <i><%= @place.address %></i>
+
   <br/><br/>
+
   <p><%= @place.description %></p>
 
 
-<% if @place.latitude.present? && @place.longitude.present? %>
- 
-  <script>
-    function initMap() {
-      var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
-      var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 12,
-        center: myLatLng
-      });
-      var marker = new google.maps.Marker({
-        position: myLatLng,
-        map: map,
-        title: 'Hello World!'
-      });
-    }
-  </script>
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
 
-  <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjrC_hY9rg8rS1N2j0gKcZjuHosSnVAeE&callback=initMap">
-  </script>
+  <% if @place.latitude.present? && @place.longitude.present? %>
 
-   <div id="map"></div>
-<% end %>
+    <script>
+      function initMap() {
+        var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 12,
+          center: myLatLng
+        });
+        var marker = new google.maps.Marker({
+          position: myLatLng,
+          map: map,
+          title: 'Hello World!'
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgYF-mCOxgd-zwF8FSdq9iImdeWMclQaQ&callback=initMap">
+    </script>
 
-<br /> 
+    <div id="map"></div>
+
+  <% end %>
+
+  <br />
+
 
   <div class="float-right">
-    <% if current_user && current_user == @place.user %>
-      <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
-      <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
-    <% end %>  
-  </div> 
+
+      <% if current_user && current_user == @place.user %>
+
+    <%= link_to 'Edit your Place', edit_place_path(@place), class: 'btn btn-primary' %>
+    <%= link_to 'Delete your Place', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
+
+  </div>
+
+      <% end %>
+    
+
+  </div>
+
 </div>
+
 <div class="clear"></div>
+<!-- Comments Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <div class="col-10 offset-1">
+        <h1 class="float-left">Comments</h1>
+        <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
+      </div> 
+      
+  <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+    <div class="modal-body">
+
+      <%= f.input :message %>
+      <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+    </div>
+
+    <div class="modal-footer">
+      <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+
+    </div>
+    <% end %>  
+    </div>
+  </div>
+</div>
 
 
+
+  <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+   </div>
+   
+  <!-- Button trigger modal -->
+  <div class="float-right">
+        <button type="button" class="btn btn-secondary float-right" data-toggle="modal" data-target="#myModal">Add a Comment</button>
+    </div>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -50,42 +116,67 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
-        <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
+        <h4 class="modal-title" id="myModalLabel">Add a Comment</h4>
       </div>
       <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-        <div class="modal-body">
+      <div class="modal-body">
           <%= f.input :message %>
           <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
         </div>
-      <% end %>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
+      <% end %>
     </div>
   </div>
 </div>
 
-<div class="col-10 offset-1">
-<h1 class="float-left">Comments</h1>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
-  Add a comment
-</button>
+  
 </div>
 
 <div class="clear"></div>
-<div class="row">
+<div class="row col-10 offset-1">
+  <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+  <div class="modal-body">
+          <%= f.input :message %>
+          <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+          <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+          <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+      <% end %>
+        </div>
   <% @place.comments.each do |comment| %>
     <div class="col-12 col-sm-6">
-      <blockquote>
-       <% if comment.humanized_rating.present? %>
+      <blockquote class="comment">
+        <% if comment.humanized_rating.present? %>
           <b><%= comment.humanized_rating %></b> -
-        <% end %>
         <%= comment.message %>
-        <small><%= comment.user.email %></small>
+        <% end %>
+        <small>- <%= comment.user.email %></small>
       </blockquote>
     </div>
   <% end %>
 </div>
+<div class="clear"></div>
+<div class="booyah-box col-10 offset-1">
+  
+    <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+      <div class="modal-body">
+        <%= f.input :caption %>
+        <%= f.submit "Add a caption", class: 'btn btn-primary' %>
+        <%= f.input :picture %>
+      </div>
+    <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+  <% end %>
+<div class="col-12 col-sm-6">
+  <% @place.photos.each do |photo| %>
+    <%= image_tag photo.picture.to_s %>
+</div>
+</div>
+<div class="clear"></div>
+
+<% end %> 
